2009-06-23  Dominique Dumont  <dominique.dumont@hp.com> 1.104 unreleased

	* lib/Config/Model/models/**.pl: replaced deprecated built_in
	parameter with upstream_default with 
	"config-model-edit -model Xorg -save"

	* lib/Config/Model/Xorg/Write.pm (wr_std_options): replaced
	deprecated built_in method with upstream_default

2009-03-19  Dominique Dumont  <dominique.dumont@hp.com> 1.103

	* Build.PL: Fix generated parts of Xorg model: Removed default
	values for keyboard models. Fixed wrong keyboard layout warp rule.

2009-03-17  Dominique Dumont  <dominique.dumont@hp.com> 1.102

	* lib/Config/Model/Xorg/Read.pm: Is now insentive to case for
	keywords (like Xorg). 
	* Fixed tests that were not correct in 1.101 
	* Hence a lot of bugs were fixed.

2009-02-24  Dominique Dumont  <dominique.dumont@hp.com> 1.101

	* config-edit-xorg: new file to ease firing up xorg.conf editor

	* lib/Config/Model/models/: all model files are now edited and
	written by Config::Model::Itself. Added Fglrx model. Added
	Extensions model. 

2008-09-29  Dominique Dumont  <dominique.dumont@hp.com> 0.513

	* lib/Config/Model/Xorg/Read.pm (read write): Fixed to fit new
	Config::Model::Autoread

2008-09-26  Dominique Dumont  <dominique.dumont@hp.com> 

	* lib/Config/Model/models/Xorg/Device/Vesa.pl: New file to provide
	vesa driver model

	* Build.PL (): Try several directories to find xorg conf
	dir (Thanks to Slaven Rezic for the suggestion) See
	http://rt.cpan.org/Ticket/Display.html?id=39339


2008-04-07  Dominique Dumont  v0.512

	* lib/Config/Model/Xorg/Read.pm (parse_option): Skip wrong Options
	when read in tolerant mode (-force option)

2008-04-02  Dominique Dumont  v0.511

	* lib/Config/Model/models/Xorg/ServerLayout.pl: no longer use
	value_type in warp mechanism

	* lib/Config/Model/models/Xorg/Monitor.pl: idem

2008-02-26  Dominique Dumont  v0.510

	* Build.PL: Use local when setting $Data::Dumper::Terse to 0 to
	avoid breaking Module::Build > 0.2808_01
