@@ -2,24 +2,6 @@
 # $Date$
 # $Revision$
 
-#    Copyright (c) 2005-2009 Dominique Dumont.
-#
-#    This file is part of Config-Xorg.
-#
-#    Config-Xorg is free software; you can redistribute it and/or
-#    modify it under the terms of the GNU Lesser Public License as
-#    published by the Free Software Foundation; either version 2.1 of
-#    the License, or (at your option) any later version.
-#
-#    Config-Xorg is distributed in the hope that it will be useful,
-#    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-#    Lesser Public License for more details.
-#
-#    You should have received a copy of the GNU Lesser Public License
-#    along with Config-Model; if not, write to the Free Software
-#    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
-
 package Config::Model::Xorg ;
 
 use Config::Model ;
@@ -145,6 +127,26 @@ sub check {
 =head1 AUTHOR
 
 Dominique Dumont, (ddumont at cpan dot org)
+
+=head1 LICENSE
+
+  Copyright (c) 2005-2009 Dominique Dumont.
+
+  This file is part of Config-Xorg.
+
+  Config-Xorg is free software; you can redistribute it and/or
+  modify it under the terms of the GNU Lesser Public License as
+  published by the Free Software Foundation; either version 2.1 of
+  the License, or (at your option) any later version.
+
+  Config-Xorg is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+  Lesser Public License for more details.
+
+  You should have received a copy of the GNU Lesser Public License
+  along with Config-Model; if not, write to the Free Software
+  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 
 =head1 SEE ALSO
 
