@@ -1,11 +1,15 @@
-2009-06-23  Dominique Dumont  <dominique.dumont@hp.com> 1.104 unreleased
+2009-06-25  Dominique Dumont  <dominique.dumont@hp.com> 1.104
+
+	* Build.PL: depends on Config::Model 0.637
+
+2009-06-23  Dominique Dumont  <dominique.dumont@hp.com> 
 
 	* lib/Config/Model/models/**.pl: replaced deprecated built_in
 	parameter with upstream_default with 
 	"config-model-edit -model Xorg -save"
 
 	* lib/Config/Model/Xorg/Write.pm (wr_std_options): replaced
-	deprecated built_in method with upstream_default
+	deprecated built_in call with upstream_default
 
 2009-03-19  Dominique Dumont  <dominique.dumont@hp.com> 1.103
 
